--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	
 	<br><br>
 	<div class=container-grey>
+	<form name="NFTMinterForm" data-netlify="true">
 	<br><br>
     <input type="text" name="metadataName" id="metadataName" placeholder="Title">
     <br><br>
@@ -23,6 +24,7 @@
     <input type="file" name="fileInput" id="fileInput">
     <br><br>
     <button class="btns" id="btn-mint" onclick="mint()">MINT NFT</button>
+		</form>
 </div>
 	<div id="transactionhash"></div>
 	<div id="opensea"></div>
