chanegd server index

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
     <script>
       // connect to Moralis server
-      Moralis.initialize("yNqoJmxMFrDCszk5JYqYVUnzHiOZpiv7KTdZKT2O");
-      Moralis.serverURL = ("https://dwvdtcdb6jv5.moralisweb3.com:2053/server");
+      Moralis.initialize("Bxfp2QKpe2RoBn7BGjIn7SIYD3s0aaVKK4R5RMlW");
+      Moralis.serverURL = ("https://gthfde6zt8ly.usemoralis.com:2053/server");
 
 	  var contract;
 	  var accounts;
@@ -471,7 +471,6 @@
 			return currentAccount;
 			
       }
-
 
 
       //Upload Image to IPFS
